<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_snow">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textColor="@color/text_dark_liver"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:maxLength="20"
        android:hint="@string/username_hint"
        android:textColor="@color/text_dark_liver"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:maxLength="20"
        android:hint="@string/first_name_hint"
        android:textColor="@color/text_dark_liver"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:maxLength="20"
        android:hint="@string/last_name_hint"
        android:textColor="@color/text_dark_liver"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/age"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/age_hint"
        android:textColor="@color/text_dark_liver"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/save_text"
        android:textColor="@color/button_light_green"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/clear_text"
        android:textColor="@color/red"
        />
</androidx.appcompat.widget.LinearLayoutCompat>